robballen75-Salesforce/4-7-15/src/objects/Project_Product__c.object
<CustomObject>
    <fields>
        <fullName>Project_Product_Sub_Type__c</fullName>
        <label>Project Product Sub-Type</label>
        <picklist>
            <controllingField>Project_Product_Type__c</controllingField>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client/Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>for DocXchange (reduced 4.5)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsystems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>v1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>v1.01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>v1.0 Beta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>v1.0 Update 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>v1.0 Update 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>v1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>v1.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>v2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>v2.0.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>v2.0.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>v2.0.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>v2.0 Update 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>v2.9.11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>v3.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>v3.0.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>v3.01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>v3.0 Update 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>v3.0 Update 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>v3.0 Update 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>v3.0 Update 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Product_Type__c</fullName>
        <label>Project Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>3BClean Batch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3BClean Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3BClean Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Author&apos;s Toolkit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoText and Building Blocks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comparison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS Utility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocID Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Workflow Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocXamine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocXtools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocXtools Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EagleEye</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EagleEye Defined Terms Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exchange Connector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flipping the Switch - Dual Format</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Application Preparedness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Numbering Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Planning Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patent Companion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDF Compare Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerPoint and Themes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal/Retention Effort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ribbon UI Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Templates and Styles Best Practices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOC Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validate Refine Align Engagement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>MS_Project__c</referenceTo>
        <relationshipLabel>Project Products</relationshipLabel>
        <relationshipName>R00N50000001uCqDEAU</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Project Product</label>
    <nameField>
        <displayFormat>PP-{000000}</displayFormat>
        <label>Project Product #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>